--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 connecdingapp.mp4 filter=lfs diff=lfs merge=lfs -text
 connecdinghome.mp4 filter=lfs diff=lfs merge=lfs -text
+AAO.mp4 filter=lfs diff=lfs merge=lfs -text
+RPCA.mp4 filter=lfs diff=lfs merge=lfs -text
